# Lera-Khananova

./: BinaryTree.cpp  CMakeLists.txt  CMakeProject.cpp  CMakeProject.h  dynamic_structure.cpp  konstruktor.cpp
